--- a/requirements.txt
+++ b/requirements.txt
@@ -1,14 +1,11 @@
-audiosegment
-certifi
-chardet
-ffmpeg
-idna
-numpy
-pip
-pydub 
-pyTelegramBotAPI
-requests
-setuptools
-urllib3
-webrtcvad
-wheel
+audiosegment==0.23.0
+certifi==2021.5.30
+chardet==4.0.0
+ffmpeg==1.4
+idna==2.10
+numpy==1.21.0
+pydub==0.25.1
+pyTelegramBotAPI==3.8.1
+requests==2.25.1
+urllib3==1.26.6
+webrtcvad==2.0.10
